@@ -290,7 +290,7 @@ class StateServiceImplTest {
 
             Mockito.doCallRealMethod().when(stateService).createQuestionAnswersSet(Mockito.any(StartParameters.class));
             Mockito.when(stateService.getCorrectAnswers(Mockito.any(), Mockito.any())).thenReturn(correctAnswers);
-            Mockito.when(stateService.getAllAvailableAnswers(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(allAvailableAnswers);
+            Mockito.when(stateService.getAllAvailableAnswers(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(allAvailableAnswers);
 
             assertDoesNotThrow(() -> stateService.createQuestionAnswersSet(startParameters));
         }
@@ -356,11 +356,23 @@ class StateServiceImplTest {
     @DisplayName("getAllAvailableAnswers method tests")
     class GetAllAvailableAnswersTest {
         private Stream<Arguments> data() {
+            Company company0 = new Company();
+            company0.setId(0);
+
+            Company company1 = new Company();
+            company1.setId(1);
+
             Speaker speaker0 = new Speaker();
             speaker0.setId(0);
+            speaker0.setCompanies(List.of(company0));
 
             Speaker speaker1 = new Speaker();
             speaker1.setId(1);
+            speaker1.setCompanies(List.of(company1));
+
+            Speaker speaker2 = new Speaker();
+            speaker2.setId(2);
+            speaker2.setCompanies(List.of(company0));
 
             Talk talk0 = new Talk();
             talk0.setId(0);
@@ -377,52 +389,47 @@ class StateServiceImplTest {
             talk2.setSpeakerIds(List.of(0L));
             talk2.setSpeakers(List.of(speaker0));
 
-            Company company0 = new Company();
-            company0.setId(0);
-
-            Company company1 = new Company();
-            company1.setId(1);
-
             Question question0 = new SpeakerQuestion(speaker0);
             Question question1 = new TalkQuestion(List.of(speaker0, speaker1), talk0);
             Question question2 = new CompanyBySpeakerQuestion(List.of(company0, company1), speaker0);
-            Question question3 = new SpeakerByCompanyQuestion(List.of(speaker0, speaker1), company0);
+            Question question3 = new SpeakerByCompanyQuestion(List.of(speaker0, speaker2), company0);
+            Question question4 = new SpeakerByCompanyQuestion(List.of(speaker1), company1);
 
             Answer answer0 = new TalkAnswer(talk0);
             Answer answer1 = new TalkAnswer(talk1);
             Answer answer2 = new TalkAnswer(talk2);
 
             return Stream.of(
-                    arguments(List.of(question0), null, GuessMode.GUESS_NAME_BY_PHOTO_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question0), null, GuessMode.GUESS_PHOTO_BY_NAME_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question0), null, GuessMode.GUESS_ACCOUNT_BY_SPEAKER_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question0), null, GuessMode.GUESS_SPEAKER_BY_ACCOUNT_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question1), List.of(answer0), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
-                    arguments(List.of(question1), List.of(answer1), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
-                    arguments(List.of(question1), List.of(answer2), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, Collections.emptyList()),
-                    arguments(List.of(question1), null, GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question2), null, GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0), new CompanyAnswer(company1))),
-                    arguments(List.of(question3), null, GuessMode.GUESS_SPEAKER_BY_COMPANY_MODE, null, List.of(new SpeakerAnswer(speaker0), new SpeakerAnswer(speaker1))),
-                    arguments(null, null, null, IllegalArgumentException.class, null),
-                    arguments(List.of(question0), null, null, IllegalArgumentException.class, null),
-                    arguments(List.of(question1), null, null, IllegalArgumentException.class, null),
-                    arguments(List.of(question1), List.of(answer0), null, IllegalArgumentException.class, null),
-                    arguments(List.of(question1), List.of(answer1), null, IllegalArgumentException.class, null)
+                    arguments(List.of(question0), null, null, GuessMode.GUESS_NAME_BY_PHOTO_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question0), null, null, GuessMode.GUESS_PHOTO_BY_NAME_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question0), null, null, GuessMode.GUESS_ACCOUNT_BY_SPEAKER_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question0), null, null, GuessMode.GUESS_SPEAKER_BY_ACCOUNT_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question1), null, List.of(answer0), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
+                    arguments(List.of(question1), null, List.of(answer1), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
+                    arguments(List.of(question1), null, List.of(answer2), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, Collections.emptyList()),
+                    arguments(List.of(question1), null, null, GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question2), null, null, GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0), new CompanyAnswer(company1))),
+                    arguments(List.of(question3, question4), question3, List.of(new SpeakerAnswer(speaker0)), GuessMode.GUESS_SPEAKER_BY_COMPANY_MODE, null, List.of(new SpeakerAnswer(speaker0), new SpeakerAnswer(speaker1))),
+                    arguments(null, null, null, null, IllegalArgumentException.class, null),
+                    arguments(List.of(question0), null, null, null, IllegalArgumentException.class, null),
+                    arguments(List.of(question1), null, null, null, IllegalArgumentException.class, null),
+                    arguments(List.of(question1), null, List.of(answer0), null, IllegalArgumentException.class, null),
+                    arguments(List.of(question1), null, List.of(answer1), null, IllegalArgumentException.class, null)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getAllAvailableAnswers(List<Question> questions, List<Answer> correctAnswers, GuessMode guessMode,
+        void getAllAvailableAnswers(List<Question> questions, Question question, List<Answer> correctAnswers, GuessMode guessMode,
                                     Class<? extends Throwable> expectedException, List<Answer> expectedValue) {
             StateServiceImpl stateService = Mockito.mock(StateServiceImpl.class);
 
-            Mockito.when(stateService.getAllAvailableAnswers(Mockito.any(), Mockito.any(), Mockito.any())).thenCallRealMethod();
+            Mockito.when(stateService.getAllAvailableAnswers(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any())).thenCallRealMethod();
 
             if (expectedException == null) {
-                assertEquals(expectedValue, stateService.getAllAvailableAnswers(questions, correctAnswers, guessMode));
+                assertEquals(expectedValue, stateService.getAllAvailableAnswers(questions, question, correctAnswers, guessMode));
             } else {
-                assertThrows(expectedException, () -> stateService.getAllAvailableAnswers(questions, correctAnswers, guessMode));
+                assertThrows(expectedException, () -> stateService.getAllAvailableAnswers(questions, question, correctAnswers, guessMode));
             }
         }
     }
